# USBridge_mesh

./: .gitignore  PLAN.md  README.md  requirements.txt
firmware/pico_host/: CMakeLists.txt  REMOTE_FLASH.md  blink_test.c  btstack_config.h  flash_remote.sh  main.c  tusb_config.h  usb_descriptors.c  usb_hid.c  usb_hid.h  usb_reset.c  usb_reset.h  usb_stdio.c  usbridge_host.c  usbridge_host.gatt
proto/: README.md  __init__.py  ble_central.py  hid_input.py  mock_host.py  protocol.py  terminal.py  test_hid.py
